--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(normalize.css);
 @import url(basic.css);
 @import url(sections/grettings.css);
-@import url(normalize.css);
+@import url(sections/service.css);
+@import url(sections/advert.css);
