--- a/css/sections/grettings.css
+++ b/css/sections/grettings.css
@@ -28,30 +28,25 @@
     font-size: 14px;
     line-height: 171%;
     color: #fff;
-    margin-top: 17px; 
 }
 
 .square {
     width: 4px;
     height: 4px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
 }
 
 .nav__item:last-child a{
-border: 2px solid white;
-padding: 11px 17px;
-border-radius: 4px;
+    border: 2px solid #ffffff;
+    padding: 11px 17px;
+    border-radius: 4px;
 }
-
 .nav__item:hover a{
     color: var(--colorGreen);
     border-color: var(--colorGreen);
 }
 
-.nav__item:last-child{}
-
-
-.grettings__desc{
+.grettings__desc {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,35 +64,14 @@ border-radius: 4px;
 }
 
 .grettings__text {
-    font-family: var(--fontBM);
-font-weight: 700;
-font-size: 13px;
-line-height: 185%;
-text-align: center;
-color: #fff;
-
-}
-
-
-
-.btn {
-    border-radius: 4px;
-    background-color: var(--colorGreen);
-    border:none;
-    padding: 15px 30px; 
-      font-family: var(--fontLV);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 187%;
+    font-family: var(--fontIBM);
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 185%;
     text-align: center;
-    color: #fff; 
-    cursor: pointer;
-    transition: transform 1s;
+    color: #fff;
+    margin-top: 17px;
 }
-
-
-.btn:hover{
-transform: scale(1.3);
 
 
 }
